--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack2-stream-watch": "^3.2.2"
   },
   "dependencies": {
+    "fastclick": "^1.0.6",
     "normalize.css": "^7.0.0"
   }
 }
